--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
@@ -83,7 +83,7 @@
 
             <ng-container matColumnDef="itemType">
               <th mat-header-cell *matHeaderCellDef>Type</th>
-              <td mat-cell *matCellDef="let element">{{ element.itemType }}</td>
+              <td mat-cell *matCellDef="let element">{{ element.itemType | humanize }}</td>
             </ng-container>
 
             <ng-container matColumnDef="remove">
