move support apps under support route with a support role auth guard

--- a/StewardClient/src/app/pages/home/home.component.html
+++ b/StewardClient/src/app/pages/home/home.component.html
@@ -3,8 +3,8 @@
     <h1>Welcome to Steward</h1>
     <p>You probably want one of these</p>
     <ul>
-      <li><a routerLink="/navbar-app/tools/home">Navbar App Tools</a></li>
-      <li><a routerLink="/ticket-app/title">Ticket App</a></li>
+      <li><a routerLink="/support/navbar-app/tools/home">Navbar App Tools</a></li>
+      <li><a routerLink="/support/ticket-app/title">Ticket App</a></li>
     </ul>
   </mat-card>
 </center-contents>
