--- a/StewardClient/src/app/pages/home/home.component.scss
+++ b/StewardClient/src/app/pages/home/home.component.scss
@@ -5,7 +5,8 @@ mat-card {
   width: 100%;
   margin-top: 30px;
 
-  h1, h2 {
+  h1,
+  h2 {
     color: mat-color($app-primary);
   }
 
@@ -20,7 +21,6 @@ mat-card {
     margin-left: auto;
     margin-right: auto;
   }
-
 
   .app-list {
     margin-top: 50px;
