--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.scss
@@ -1,1 +1,7 @@
 @import '/src/variables.scss';
+
+@media screen and (max-width: 1000px) {
+  .default-page-layout-left {
+    max-width: unset;
+  }
+}
