--- a/StewardClient/src/app/pages/navbar-app/pages/user-details/user-details.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-details/user-details.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="default">
+<mat-toolbar>
   <a
     [class.mat-button-disabled]="!identity?.extra.hasSunrise"
     [matTooltip]="sunriseTooltip"
