--- a/StewardClient/src/global.scss
+++ b/StewardClient/src/global.scss
@@ -14,17 +14,17 @@ body {
   font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
 
-::-webkit-scrollbar {
-  width: 3px;
-}
+// ::-webkit-scrollbar {
+//   width: 3px;
+// }
 
-::-webkit-scrollbar-track {
-  background: mat-color($app-theme, 50);
-}
+// ::-webkit-scrollbar-track {
+//   background: mat-color($app-theme, 50);
+// }
 
-::-webkit-scrollbar-thumb {
-  background: mat-color($app-theme, 800);
-}
+// ::-webkit-scrollbar-thumb {
+//   background: mat-color($app-theme, 800);
+// }
 
 mat-drawer-container {
   background-color: #e8e8e8 !important;
