--- a/StewardClient/src/app/pages/error/error.component.html
+++ b/StewardClient/src/app/pages/error/error.component.html
@@ -3,9 +3,6 @@
 <center-contents>
   <mat-card>
     <h1>You probably want one of these</h1>
-    <ul>
-      <li><a routerLink="/navbar-app/tools/home">Navbar App Tools</a></li>
-      <li><a routerLink="/ticket-app/">Ticket App</a></li>
-    </ul>
+    <available-apps></available-apps>
   </mat-card>
 </center-contents>
