Restructure style files

--- a/StewardClient/src/global.scss
+++ b/StewardClient/src/global.scss
@@ -1,70 +1,7 @@
-@import '/src/variables.scss';
-@import '/src/variables-introspection.scss';
-
-@include mat-core();
-@include angular-material-theme($app-theme);
-
-html,
-body {
-  height: 100%;
-}
-
-body {
-  margin: 0;
-  font-family: Roboto, 'Helvetica Neue', sans-serif;
-}
-
-// ::-webkit-scrollbar {
-//   width: 3px;
-// }
-
-// ::-webkit-scrollbar-track {
-//   background: mat-color($app-theme, 50);
-// }
-
-// ::-webkit-scrollbar-thumb {
-//   background: mat-color($app-theme, 800);
-// }
-
-mat-drawer-container {
-  background-color: #e8e8e8 !important;
-}
-
-mat-toolbar.secondary {
-  background-color: #fff !important;
-}
-
-.mat-tab-labels {
-  background-color: #fff;
-
-  .mat-tab-label-active {
-    background-color: mat-color($app-primary);
-    color: #fff;
-    opacity: 1;
-  }
-}
-
-// Default page layout template
-.default-page-layout {
-  width: 100%;
-  display: flex;
-  flex-flow: row wrap;
-  > * {
-    margin: 10px;
-  }
-
-  .default-page-layout-left {
-    max-width: 400px;
-    width: 100%;
-  }
-
-  .default-page-layout-right {
-    display: flex;
-    flex-flow: column nowrap;
-    flex-grow: 1;
-    margin: 0;
-    > * {
-      margin: 10px;
-    }
-  }
-}
+@import '/src/styles/mixins/variables.scss';
+@import '/src/styles/mixins/variables-introspection.scss';
+@import '/src/styles/global/angular-material.scss';
+@import '/src/styles/global/body.scss';
+@import '/src/styles/global/angular-material-drawer.scss';
+@import '/src/styles/global/angular-material-tabs.scss';
+@import '/src/styles/global/default-page-layout.scss';
