--- a/StewardClient/src/app/pages/navbar-app/navbar-app.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/navbar-app.component.scss
@@ -9,6 +9,8 @@
 
 mat-drawer-container {
   flex-grow: 1;
+  display: flex;
+  flex-flow: column nowrap;
 }
 
 mat-drawer {
@@ -17,6 +19,7 @@ mat-drawer {
 
 // this is an implicit element, so we have to use ::ng-deep
 :host ::ng-deep mat-drawer-content {
+  flex-grow: 1;
   display: flex;
   flex-flow: column nowrap;
   min-height: 100%;
