C:/Program Files/Git/src/variables.scss -> /src/styles/mixins/variables.scss

--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.scss
@@ -1,4 +1,4 @@
-@import '/src/variables.scss';
+@import '/src/styles/mixins/variables.scss';
 
 @media screen and (max-width: 1000px) {
   .default-page-layout-left {
