--- a/StewardClient/src/app/pages/auth/login/login.component.scss
+++ b/StewardClient/src/app/pages/auth/login/login.component.scss
@@ -1,4 +1,4 @@
-@import '/src/variables.scss';
+@import '/src/styles/mixins/variables.scss';
 
 :host {
   margin: $gap-vertical-layout $gap-side-gutter;
