--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gifting-result/gifting-result.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gifting-result/gifting-result.component.html
@@ -8,7 +8,7 @@
   >
     <mat-expansion-panel-header>
       <mat-panel-title>
-        {{ result.playerOrLspGroup }} ({{ GiftHistoryAntecedent[result.identityAntecedent] }})
+        {{ result.playerOrLspGroup }} ({{ result.identityAntecedent }})
       </mat-panel-title>
       <mat-panel-description>
         {{ !!result.error ? 'Click to see error' : 'Gift sent successfully' }}
