update UI inventory to work with updated models

--- a/StewardClient/src/app/shared/views/player-inventory/player-inventory-tables/player-inventory-tables.component.scss
+++ b/StewardClient/src/app/shared/views/player-inventory/player-inventory-tables/player-inventory-tables.component.scss
@@ -1,3 +1,14 @@
 table {
   width: 100%;
 }
+
+mat-panel-title {
+  max-width: 150px;
+  width: 100%;
+}
+
+@media screen and (max-width: 400px) {
+  mat-panel-description {
+    display: none;
+  }
+}
