--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
@@ -108,7 +108,7 @@
             ></tr>
           </table>
         </div>
-        <mat-error *ngIf="giftBasketErrors">There are item errors in the gift basket.</mat-error>
+        <mat-error *ngIf="giftBasketHasErrors">There are item errors in the gift basket.</mat-error>
 
         <!-- Send Gift Basket -->
         <div class="send-gift-basket-container">
