--- a/StewardClient/src/app/pages/navbar-app/components/navbar/navbar.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/components/navbar/navbar.component.scss
@@ -23,3 +23,9 @@ fa-icon {
 .location {
   overflow: hidden;
 }
+
+// Make selected navbar option more visible
+.navbar-button-active {
+  background-color: #fff;
+  color: mat-color($app-primary);
+}
