--- a/StewardClient/src/app/pages/navbar-app/pages/gift-history/gift-history.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gift-history/gift-history.component.html
@@ -3,7 +3,7 @@
     *ngFor="let link of navbarRouterLinks"
     [routerLink]="link.route"
     mat-button
-    routerLinkActive="mat-stroked-button"
+    routerLinkActive="navbar-button-active"
     >{{ link.name }}</a
   >
 </mat-toolbar>
