--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/gifting.component.html
@@ -3,9 +3,8 @@
     *ngFor="let link of navbarRouterLinks"
     [routerLink]="link.route"
     mat-button
-    routerLinkActive="mat-stroked-button"
-    >{{ link.name }}</a
-  >
+    routerLinkActive="navbar-button-active"
+  >{{ link.name }}</a>
   <span class="spacer"></span>
 </mat-toolbar>
 
