--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/gifting.component.html
@@ -4,7 +4,8 @@
     [routerLink]="link.route"
     mat-button
     routerLinkActive="navbar-button-active"
-  >{{ link.name }}</a>
+    >{{ link.name }}</a
+  >
   <span class="spacer"></span>
 </mat-toolbar>
 
