--- a/StewardClient/src/app/pages/navbar-app/components/player-selection/bulk/player-selection-bulk.component.html
+++ b/StewardClient/src/app/pages/navbar-app/components/player-selection/bulk/player-selection-bulk.component.html
@@ -11,10 +11,12 @@
 
 <mat-form-field class="example-chip-list">
   <mat-label>{{ lookupType | humanize }}</mat-label>
-  <mat-chip-list #chipList aria-label="Fruit selection">
+  <mat-chip-list #chipList aria-label="Fruit selection" [selectable]="allowSelection">
     <mat-chip
       *ngFor="let identity of foundIdentities"
-      [selectable]="false"
+      #chip="matChip"
+      (click)="chip.toggleSelected(true)"
+      [selectable]="allowSelection"
       [removable]="true"
       [class.identity-valid]="identity.extra?.isValid"
       [class.identity-invalid]="identity.extra?.isInvalid"
