apollo lookup works

--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.scss
@@ -1,1 +1,10 @@
 @import '/src/variables.scss';
+
+.default-page-layout-left {
+  display: flex;
+  flex-flow: row wrap;
+
+  .reference-inventory {
+    flex-grow: 1;
+  }
+}
