--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
@@ -20,13 +20,22 @@
       </mat-tab>
     </mat-tab-group>
 
-    <ng-container *ngIf="selectedPlayerIdentity">
-      doot doot
-    </ng-container>
+    <div class="reference-inventory" *ngIf="selectedPlayerIdentity">
+      <apollo-player-inventory-profile-picker
+        [identity]="selectedPlayerIdentity"
+        [(profileId)]="selectedPlayerInventoryProfile"
+      ></apollo-player-inventory-profile-picker>
+      <apollo-player-inventory
+        [identity]="selectedPlayerIdentity"
+        [profileId]="selectedPlayerInventoryProfile"
+        (inventoryFound)="onInventoryFound($event)"
+      ></apollo-player-inventory>
+    </div>
   </div>
 
   <div class="default-page-layout-right">
     <apollo-gift-basket
+      [referenceInventory]="selectedPlayerInventory"
       [playerIdentities]="selectedPlayerIdentities"
       [lspGroup]="undefined"
       [usingPlayerIdentities]="true"
