--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/gifting.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/gifting.component.scss
@@ -1,4 +1,4 @@
-@import '/src/variables.scss';
+@import '/src/styles/mixins/variables.scss';
 
 .navbar-button-active {
   background-color: mat-color($app-accent);
